--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -23,7 +23,7 @@
                 Code Elevator, Golo powered by <b>TypeUnSafe inc.</b>
                 <a class="label label-info" href="https://twitter.com/typeunsafe">@typeunsafe</a>
             </p>
-            <em>Based on the <a hred="http://www.code-story.net/contest/">Code Story contest</a>.</em>
+            <em>Based on the <a href="http://www.code-story.net/contest/">Code Story contest</a>.</em>
         </div>
         <div class="container">
             <div class="row">
